--- a/index.html
+++ b/index.html
@@ -650,14 +650,16 @@
       <th class="name">&lt;q&gt;<br>quotationタグ</th>
       <td class="attribute">cite</td>
       <td class="code">
-          
+        太宰治の走れメロスの冒頭は<br>
+        &lt;q cite="https://www.aozora.gr.jp/cards/000035/files/1567_14913.html"><br>
+        メロスは激怒した&lt;/q>と始まる。
       </td>
       <td class="view">
-        
+        太宰治の走れメロスの冒頭は<q cite="https://www.aozora.gr.jp/cards/000035/files/1567_14913.html">メロスは激怒した</q>と始まる。
       </td>
       <td class="supple">
         引用句、引用文であることを表す。<br>ブラウザでは「 」や”　”で表されることが多いが、その表記を目的に用いることは不適切。<br>
-        cite属性に引用元のURLを指定するが、作品のタイトルを表すciteタグと混同しないよう注意。
+        cite属性に引用元のURLを指定するが、<strong>作品のタイトルを表すciteタグと混同しないよう注意。</strong>
       </td>
     </tr>
 
