--- a/index.html
+++ b/index.html
@@ -681,13 +681,13 @@
           </select>
         </p>
         <p>
-          <label for="contact">ご希望の連絡方法（複数選択可）：</label>
-          <select id="contact" name="contact" multiple size="5">
-          <option value="email" selected>電子メール</option>
-          <option value="tel" selected>電話</option>
-          <option value="fax" selected>ファックス</option>
-          <option value="postal" selected>郵便</option>
-          <option value="office">ご来店時に係員より説明</option>
+          <label for="languages">複数選択可：</label>
+          <select id="languages" name="languages" multiple size="5">
+          <option value="en" selected>英語</option>
+          <option value="de" selected>ドイツ語</option>
+          <option value="fr" selected>フランス語</option>
+          <option value="ja" selected>日本語</option>
+          <option value="zh">中国語</option>
           </select>
         </p>
       </td>
