--- a/index.html
+++ b/index.html
@@ -667,7 +667,26 @@
       <th class="name">&lt;select&gt;</th>
       <td class="attribute">multiple</td>
       <td class="code">
-          
+        &lt;p>
+          &lt;label for="language">言語を選択してください：&lt;/label> <br>
+          &lt;select id="language" name="language"><br>
+          &lt;option value="en">英語&lt;/option><br>
+          &lt;option value="de">ドイツ語&lt;/option><br>
+          &lt;option value="fr">フランス語&lt;/option><br>
+          &lt;option value="ja" selected>日本語&lt;/option><br>
+          &lt;option value="zh">中国語&lt;/option><br>
+          &lt;/select>
+        &lt;/p><br>
+        &lt;p>
+          &lt;label for="languages">複数選択可：&lt;/label><br>
+          &lt;select id="languages" name="languages" multiple size="5"><br>
+          &lt;option value="en" selected>英語&lt;/option><br>
+          &lt;option value="de" selected>ドイツ語&lt;/option><br>
+          &lt;option value="fr" selected>フランス語&lt;/option><br>
+          &lt;option value="ja" selected>日本語&lt;/option><br>
+          &lt;option value="zh">中国語&lt;/option><br>
+          &lt;/select>
+        &lt;/p>
       </td>
       <td class="view">
         <p>
