--- a/index.html
+++ b/index.html
@@ -719,10 +719,12 @@
       <th class="name">&lt;span&gt;</th>
       <td class="attribute"></td>
       <td class="code">
-          
+          &lt;p>光の三原色：&lt;span style="background-color: RED">赤&lt;/span> <br>
+             &lt;span style="background-color:#33CC33">緑&lt;/span> <br>
+              &lt;span style="background-color:#0099FF">青&lt;/span>&lt;/p> 
       </td>
       <td class="view">
-        
+        <p>光の三原色：<span style="background-color: RED">赤</span> <span style="background-color:#33CC33">緑</span> <span style="background-color:#0099FF">青</span></p>
       </td>
       <td class="supple">
         divのブロックレベル要素に対して、spanはインライン要素となる。<br>
