--- a/index.html
+++ b/index.html
@@ -736,6 +736,20 @@
       <th class="name">&lt;strong&gt;</th>
       <td class="attribute"></td>
       <td class="code">
+          &lt;strong>※注意※&lt;/strong>
+      </td>
+      <td class="view">
+        <strong>※注意※</strong>
+      </td>
+      <td class="supple">
+        強い重要性を表す。強勢を表すemタグよりも強い強調。
+      </td>
+    </tr>
+
+    <tr>
+      <th class="name">&lt;table&gt;</th>
+      <td class="attribute"></td>
+      <td class="code">
           
       </td>
       <td class="view">
