--- a/index.html
+++ b/index.html
@@ -750,13 +750,26 @@
       <th class="name">&lt;table&gt;</th>
       <td class="attribute"></td>
       <td class="code">
-          
+          &lt;table> <br>
+            &lt;tr>
+              &lt;th>tr&lt;/th>
+              &lt;td>テーブルライン。横一行を作る。よく忘れる。&lt;/td>
+            &lt;/tr><br>
+            &lt;tr>
+              &lt;th>th&lt;/th>
+              &lt;td>見出しのセル。一般的なブラウザでは太字になる。&lt;/td>
+            &lt;/tr><br>
+            &lt;tr>
+              &lt;th>td&lt;/th>
+              &lt;td>データセル&lt;/td>
+            &lt;/tr><br>
+          &lt;/table>
       </td>
       <td class="view">
         <table>
           <tr>
             <th>tr</th>
-            <td>テーブルライン。横一行を作る。<br>初学者はよく忘れる。</td>
+            <td>テーブルライン。横一行を作る。よく忘れる。</td>
           </tr>
           <tr>
             <th>th</th>
