--- a/index.html
+++ b/index.html
@@ -785,7 +785,9 @@
         tr,th,tdと用いることでテーブル（表）を形成する。<br>このサイト全体も巨大なテーブルである。
       </td>
     </tr>
-
+<!-- およげ！たいやきくん	子門真人	457.7
+2位	1972/05/10	女のみち	宮史郎とぴんからトリオ	325.6
+3位	2000/01/26	TSUNAMI	サザンオールスターズ	293.6 -->
     <tr>
       <th class="name">&lt;tbody&gt;</th>
       <td class="attribute"></td>
@@ -799,14 +801,31 @@
               <th>順位</th>
               <th>タイトル</th>
               <th>アーティスト名</th>
-              <th>売上枚数</th>
+              <th>売上枚数（万枚）</th>
             </tr>
           </thead>
           <tbody>
-
+            <tr>
+              <th>1位</th>
+              <td>およげ!たいやきくん</td>
+              <td>子門真人</td>
+              <td>457.7</td>
+            </tr>
+            <tr>
+              <th>2位</th>
+              <td>女のみち</td>
+              <td>宮史郎とぴんからトリオ</td>
+              <td>325.6</td>
+            </tr>
+            <tr>
+              <th>3位</th>
+              <td>TSUNAMI</td>
+              <td>サザンオールスターズ</td>
+              <td>293.6</td>
+            </tr>
           </tbody>
           <tfoot>
-
+            <tr><td colspan="4">歴代CDシングル売り上げ枚数ランキング</td></tr>
           </tfoot>
         </table>
       </td>
