--- a/index.html
+++ b/index.html
@@ -785,14 +785,44 @@
         tr,th,tdと用いることでテーブル（表）を形成する。<br>このサイト全体も巨大なテーブルである。
       </td>
     </tr>
-<!-- およげ！たいやきくん	子門真人	457.7
-2位	1972/05/10	女のみち	宮史郎とぴんからトリオ	325.6
-3位	2000/01/26	TSUNAMI	サザンオールスターズ	293.6 -->
+
     <tr>
       <th class="name">&lt;tbody&gt;</th>
       <td class="attribute"></td>
       <td class="code">
-          
+          &lt;table> <br>
+            &lt;thead> <br>
+              &lt;tr>
+                &lt;th>順位&lt;/th>
+                &lt;th>タイトル&lt;/th>
+                &lt;th>アーティスト名&lt;/th>
+                &lt;th>売上枚数（万枚）&lt;/th>
+              &lt;/tr><br>
+            &lt;/thead><br>
+            &lt;tbody><br>
+              &lt;tr>
+                &lt;th>1位&lt;/th>
+                &lt;td>およげ!たいやきくん&lt;/td>
+                &lt;td>子門真人&lt;/td>
+                &lt;td>457.7&lt;/td>
+              &lt;/tr><br>
+              &lt;tr>
+                &lt;th>2位&lt;/th>
+                &lt;td>女のみち&lt;/td>
+                &lt;td>宮史郎とぴんからトリオ&lt;/td>
+                &lt;td>325.6&lt;/td>
+              &lt;/tr><br>
+              &lt;tr>
+                &lt;th>3位&lt;/th>
+                &lt;td>TSUNAMI&lt;/td>
+                &lt;td>サザンオールスターズ&lt;/td>
+                &lt;td>293.6&lt;/td>
+              &lt;/tr><br>
+            &lt;/tbody><br>
+            &lt;tfoot><br>
+              &lt;tr>&lt;td colspan="4">歴代CDシングル売り上げ枚数ランキング&lt;/td>&lt;/tr><br>
+            &lt;/tfoot><br>
+          &lt;/table>
       </td>
       <td class="view">
         <table>
