--- a/index.html
+++ b/index.html
@@ -19,24 +19,15 @@
       <th class="header">表示</th>
       <th class="header">補足</th>
     </tr>
-    <!-- ひな形 -->
-    <tr>
-      <th class="name">&lt; &gt;<br>タグ</th>
-      <td class="attribute"></td>
-      <td class="code">
-      </td>
-      <td class="view"></td>
-      <td class="supple"></td>
-    </tr>
     <!-- コンテンツ -->
     <tr>
       <th class="name">&lt;a&gt;<br>anchorタグ</th>
       <td class="attribute">href</td>
       <td class="code">
-        &lt;a href="https://manablog.org/" target="_blank"&gt;マナブブログへ（笑）！&lt;/a&gt;
+        &lt;a href="https://manablog.org/" target="_blank"&gt;マナブブログ&lt;/a&gt;
       </td>
       <td class="view">
-        <a href="https://manablog.org/" target="_blank">マナブブログへ（笑）！</a>
+        <a href="https://manablog.org/" target="_blank">マナブブログ</a>
       </td>
       <td class="supple"></td>
     </tr>
@@ -100,7 +91,7 @@
       <td class="view">
         <button type="button" value="ボタンです">valueよりも優先的に表示</button>
       </td>
-      <td class="supple">フォームで用いる。同様の&lt;input type="submit">と違うのは、属性とデザインが自由。<a href="">詳しくはこちら。</a></td>
+      <td class="supple">フォームで用いる。同様の&lt;input type="submit">と違うのは、属性とデザインが自由。</td>
     </tr>
 
     <tr>
