--- a/css-sheet.html
+++ b/css-sheet.html
@@ -7,6 +7,18 @@
   <title>css のチートシート</title>
 </head>
 <body>
-  
+  <table>
+    <thead>
+      <tr>
+        <th>必要な項目</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>セレクタ</td>
+      </tr>
+    </tbody>
+    <tfoot></tfoot>
+  </table>
 </body>
 </html>
