--- a/css-sheet.html
+++ b/css-sheet.html
@@ -7,18 +7,10 @@
   <title>css のチートシート</title>
 </head>
 <body>
-  <table>
-    <thead>
-      <tr>
-        <th>必要な項目</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>セレクタ</td>
-      </tr>
-    </tbody>
-    <tfoot></tfoot>
-  </table>
+  <h1>必要なもの</h1>
+  <ul>
+    <li>セレクタ</li>
+    <li></li>
+  </ul>
 </body>
 </html>
