--- a/index.html
+++ b/index.html
@@ -266,14 +266,14 @@
 
 
     <tr>
-      <th>
+      <th class="name">
         &lt;h●&gt;<br>Headingタグ
       </th>
-      <td></td>
-      <td>
+      <td class="attribute"></td>
+      <td class="code">
         &lt;h1&gt;1大見出し&lt;/h1&gt;<br>&lt;h2&gt;2小見出し&lt;/h2&gt;<br>&lt;h3&gt;3小見出し&lt;/h3&gt;<br>&lt;h4&gt;4小見出し&lt;/h4&gt;<br>&lt;h5&gt;5小見出し&lt;/h5&gt;<br>&lt;h6&gt;6小見出し&lt;/h6&gt;
       </td>
-      <td>
+      <td class="view">
         <table>
           <tr>
             <td>
@@ -297,7 +297,7 @@
           </tr>
         </table>
       </td>
-      <td>
+      <td class="supple">
         ※デザインの都合上、表示は横に並べています。<br>h1 ~ h6の使い方については<a href="">こちら</a>
       </td>
     </tr>
