--- a/css-sheet.html
+++ b/css-sheet.html
@@ -8,10 +8,19 @@
   <title>css のチートシート</title>
 </head>
 <body>
-  <h1>CSS のポイントとして必要なもの</h1>
-  <ul>
-    <li>セレクタ</li>
-    <li>プロパティ</li>
-  </ul>
+  <div class="source">
+    <pre>
+    <code>
+    &lt;h1>Title&lt;/h1>
+    &lt;p>paragraph1&lt;/p>
+    &lt;p>paragraph２. &lt;a href="#">link1&lt;/a>&lt;/p>
+  </code>
+</pre>
+  </div>
+  <div class="view">
+    <h1>Title</h1>
+    <p>paragraph1</p>
+    <p>paragraph２. <a href="#">link1</a></p>
+  </div>
 </body>
 </html>
