--- a/css-sheet.html
+++ b/css-sheet.html
@@ -12,16 +12,40 @@
   <div class="source">
     <pre>
     <code>
-    &lt;h2>Title&lt;/h2>
-    &lt;p id="red" class="para red">paragraph1&lt;/p>
-    &lt;p class="para blue">paragraph２. &lt;a href="#">link1&lt;/a>&lt;/p>
+        &lt;h2>Title1&lt;/h2>
+        &lt;p id="red" class="para red">paragraph1&lt;/p>
+        &lt;input type="text">
+        &lt;p class="para blue">paragraph２&lt;a href="#">link1&lt;/a>hogehoge&lt;/p>
+        &lt;h2>Title2&lt;/h2>
+        &lt;p class="para green">paragraph3&lt;a href="https://youtu.be/ayjyN-9uwQU">link2&lt;/a>
+          &lt;span class="parent">hoge
+            &lt;span>hugahuga&lt;/span>hoge&lt;/span>
+        &lt;/p>
+        &lt;ul>
+          &lt;li>The first child of ul&lt;/li>
+          &lt;li>2nd&lt;/li>
+          &lt;li>3rd&lt;/li>
+          &lt;li>The last child of ul&lt;/li>
+        &lt;/ul>
   </code>
 </pre>
   </div>
   <div class="view">
-    <h2>Title</h2>
-    <p>paragraph1</p>
-    <p>paragraph２ <a href="#">link1</a></p>
+      <h2>Title1</h2>
+      <p id="red" class="para red">paragraph1</p>
+      <input type="text">
+      <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
+      <h2>Title2</h2>
+      <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
+        <span class="parent">hoge
+          <span>hugahuga</span>hoge</span>
+      </p>
+      <ul>
+        <li>The first child of ul</li>
+        <li>2nd</li>
+        <li>3rd</li>
+        <li>The last child of ul</li>
+      </ul>
   </div>
 </div>
 
@@ -40,10 +64,20 @@
   </div>
   <div class="view">
       <h2>Title1</h2>
-      <p id="red" class="para red">paragraph1</p>
-      <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
-      <h2>Title2</h2>
-      <p class="para green">paragraph3<span>hogehoge</span>hugahuga</p>
+    <p id="red" class="para red">paragraph1</p>
+    <input type="text">
+    <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
+    <h2>Title2</h2>
+    <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
+      <span class="parent">hoge
+        <span>hugahuga</span>hoge</span>
+    </p>
+    <ul>
+      <li>The first child of ul</li>
+      <li>2nd</li>
+      <li>3rd</li>
+      <li>The last child of ul</li>
+    </ul>
   </div>
   <div>ポイント！後からclassで指定していますが、idの方が強いです！</div>
 </div>
@@ -68,13 +102,52 @@
 </pre>
   </div>
   <div class="view">
-    <h2>Title1</h2>
-    <p id="red" class="para red">paragraph1</p>
-    <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
-    <h2>Title2</h2>
-    <p class="para green">paragraph3<span>hogehoge</span>hugahuga</p>
+      <h2>Title1</h2>
+      <p id="red" class="para red">paragraph1</p>
+      <input type="text">
+      <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
+      <h2>Title2</h2>
+      <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
+        <span class="parent">hoge
+          <span>hugahuga</span>hoge</span>
+      </p>
+      <ul>
+        <li>The first child of ul</li>
+        <li>2nd</li>
+        <li>3rd</li>
+        <li>The last child of ul</li>
+      </ul>
   </div>
   <div>point! クラスを複数指定している（="para red"みたいに）ことが活きてくる！</div>
+</div>
+
+<div id="div4" class="box">
+  <div class="source">
+    <pre>
+    <code>
+
+
+  </code>
+</pre>
+  </div>
+  <div class="view">
+    <h2>Title1</h2>
+    <p id="red" class="para red">paragraph1</p>
+    <input type="text">
+    <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
+    <h2>Title2</h2>
+    <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
+      <span class="parent">hoge
+        <span>hugahuga</span>hoge</span>
+    </p>
+    <ul>
+      <li>The first child of ul</li>
+      <li>2nd</li>
+      <li>3rd</li>
+      <li>The last child of ul</li>
+    </ul>
+  </div>
+  <div>point!</div>
 </div>
 
 </body>
