--- a/css-sheet.html
+++ b/css-sheet.html
@@ -125,7 +125,7 @@
   <div class="source">
     <pre>
     <code>
-
+        使用セレクタ > , + , ~
 
   </code>
 </pre>
@@ -140,6 +140,7 @@
       <span class="parent">hoge
         <span>hugahuga</span>hoge</span>
     </p>
+    <p class="para green">paragraph3-2</p>
     <ul>
       <li>The first child of ul</li>
       <li>2nd</li>
