--- a/css-sheet.html
+++ b/css-sheet.html
@@ -37,7 +37,7 @@
       <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
       <h2>Title2</h2>
       <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
-        <span class="parent">hoge
+        <span>hogehoge</span><strong><span>hugahuga</span></strong>
           <span>hugahuga</span>hoge</span>
       </p>
       <ul>
@@ -69,7 +69,7 @@
     <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
     <h2>Title2</h2>
     <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
-      <span class="parent">hoge
+      <span>hogehoge</span><strong><span>hugahuga</span></strong>
         <span>hugahuga</span>hoge</span>
     </p>
     <ul>
@@ -108,7 +108,7 @@
       <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
       <h2>Title2</h2>
       <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
-        <span class="parent">hoge
+        <span>hogehoge</span><strong><span>hugahuga</span></strong>
           <span>hugahuga</span>hoge</span>
       </p>
       <ul>
@@ -137,8 +137,7 @@
     <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
     <h2>Title2</h2>
     <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
-      <span class="parent">hoge
-        <span>hugahuga</span>hoge</span>
+      <span>hogehoge</span><strong><span>hugahuga</span></strong>
     </p>
     <p class="para green">paragraph3-2</p>
     <ul>
