--- a/css-sheet.html
+++ b/css-sheet.html
@@ -125,15 +125,15 @@
   <div class="source">
     <pre>
     <code>
-      #div4 .green > span{
+      .green > span{
         color: green;
       }
       
-      #div4 h2 + p {
+      h2 + p {
         background-color: rgba(255, 255, 0, 0.31);
       }
       
-      #div4 h2 ~ p {
+      h2 ~ p {
         font-style: oblique;
       }
   </code>
