--- a/css-sheet.html
+++ b/css-sheet.html
@@ -166,9 +166,14 @@
   <div class="source">
     <pre>
     <code>
-        [class]{} //クラス属性を持った全ての要素
-        [href="#"]{} //#のリンクを持ったhref属性を持った要素
-        a[href="#"]{} // ゞ でかつaタグの要素
+      /*クラス属性を持っている全ての要素（この場合はp要素）*/
+      [class]{
+        background-color: aqua;
+      }
+      /*a要素のうち、href="#"を持っているもの。link2はyoutubeへのリンクになっているので適用外となる*/
+      a[href="#"]{
+        color: rgb(255, 77, 0);
+      }
   </code>
 </pre>
   </div>
@@ -181,7 +186,7 @@
     <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
       <span>hogehoge</span><strong><span>hugahuga</span></strong>
     </p>
-    <p class="para green">paragraph3-2</p>
+    <p class="para green">paragraph3-2<a href="#">link3</a></p>
     <ul>
       <li>The first child of ul</li>
       <li>2nd</li>
