--- a/css-sheet.html
+++ b/css-sheet.html
@@ -201,5 +201,41 @@
   </div>
 </div>
 
+<div id="div6" class="box">
+  <div class="source">
+    <pre>
+    <code>
+        動的な事象へのセレクタ
+        - :focus | :focus{ } フォーカスされている（input要素などに便利）
+        - :hover | マウスが乗っている
+        - :visited | 訪問済みのリンク
+        - :link | 未訪問のリンク
+  </code>
+</pre>
+  </div>
+  <div class="view">
+    <h2>Title1</h2>
+    <p id="red" class="para red">paragraph1</p>
+    <input type="text">
+    <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
+    <h2>Title2</h2>
+    <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
+      <span>hogehoge</span><strong><span>hugahuga</span></strong>
+    </p>
+    <p class="para green">paragraph3-2<a href="#">link3</a></p>
+    <ul>
+      <li>The first child of ul</li>
+      <li>2nd</li>
+      <li>3rd</li>
+      <li>The last child of ul</li>
+    </ul>
+  </div>
+  <div>
+    <p>
+      point!!
+    </p>
+  </div>
+</div>
+
 </body>
 </html>
