--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <th class="name">&lt;a&gt;<br>anchorタグ</th>
       <td class="attribute">href</td>
       <td class="code">
-        &lt;a href="https://manablog.org/" target="_blank"&gt;マナブブログ&lt;/a&gt;
+        &lt;a href="https://youtu.be/lqaMJDF_fy0" target="_blank"&gt;はじめてのHTML&lt;/a&gt;
       </td>
       <td class="view">
-        <a href="https://manablog.org/" target="_blank">マナブブログ</a>
+        <a href="https://youtu.be/lqaMJDF_fy0" target="_blank">はじめてのHTML</a>
       </td>
       <td class="supple"></td>
     </tr>
