--- a/css-sheet.html
+++ b/css-sheet.html
@@ -205,11 +205,25 @@
   <div class="source">
     <pre>
     <code>
-        動的な事象へのセレクタ
-        - :focus | :focus{ } フォーカスされている（input要素などに便利）
-        - :hover | マウスが乗っている
-        - :visited | 訪問済みのリンク
-        - :link | 未訪問のリンク
+      /*インプットをフォーカスしてみてください*/
+      #div6 input:focus{
+        background-color: yellow;
+      }
+      /*link1にマウスを置いてみてください*/
+      #div6 .blue a:hover{
+        color: aquamarine;
+      }
+      /*link2を押して、その後このページに戻ってきてください*/
+      #div6 .green a:visited{
+        color:red;
+      }
+      /*link3訪問前→訪問後*/
+      #div6 .add a:link{
+        background-color: aquamarine;
+      }
+      #div6 .add a:visited{
+        background-color: red;
+      }
   </code>
 </pre>
   </div>
@@ -219,10 +233,10 @@
     <input type="text">
     <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
     <h2>Title2</h2>
-    <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
+    <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU" target="_blank">link2</a>
       <span>hogehoge</span><strong><span>hugahuga</span></strong>
     </p>
-    <p class="para green">paragraph3-2<a href="#">link3</a></p>
+    <p class="para add">paragraph3-2<a href="#">link3</a></p>
     <ul>
       <li>The first child of ul</li>
       <li>2nd</li>
