--- a/css-sheet.html
+++ b/css-sheet.html
@@ -236,7 +236,7 @@
     <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU" target="_blank">link2</a>
       <span>hogehoge</span><strong><span>hugahuga</span></strong>
     </p>
-    <p class="para add">paragraph3-2<a href="#">link3</a></p>
+    <p class="para add">paragraph3-2<a href="https://netaro-n.github.io/basic-programming-roadmap/" target="_blank">link3</a></p>
     <ul>
       <li>The first child of ul</li>
       <li>2nd</li>
