--- a/css-sheet.html
+++ b/css-sheet.html
@@ -8,47 +8,47 @@
   <title>css のチートシート</title>
 </head>
 <body>
-  <div>
-  <div class="source">
-    <pre>
-    <code>
-        &lt;h2>Title1&lt;/h2>
-        &lt;p id="red" class="para red">paragraph1&lt;/p>
-        &lt;input type="text">
-        &lt;p class="para blue">paragraph２&lt;a href="#">link1&lt;/a>hogehoge&lt;/p>
-        &lt;h2>Title2&lt;/h2>
-        &lt;p class="para green">paragraph3&lt;a href="https://youtu.be/ayjyN-9uwQU">link2&lt;/a>
-          &lt;span class="parent">hoge
-            &lt;span>hugahuga&lt;/span>hoge&lt;/span>
-        &lt;/p>
-        &lt;ul>
-          &lt;li>The first child of ul&lt;/li>
-          &lt;li>2nd&lt;/li>
-          &lt;li>3rd&lt;/li>
-          &lt;li>The last child of ul&lt;/li>
-        &lt;/ul>
-  </code>
-</pre>
-  </div>
-  <div class="view">
-      <h2>Title1</h2>
-      <p id="red" class="para red">paragraph1</p>
-      <input type="text">
-      <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
-      <h2>Title2</h2>
-      <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
-        <span>hogehoge</span><strong><span>hugahuga</span></strong>
-          <span>hugahuga</span>hoge</span>
-      </p>
-      <ul>
-        <li>The first child of ul</li>
-        <li>2nd</li>
-        <li>3rd</li>
-        <li>The last child of ul</li>
-      </ul>
-  </div>
-</div>
 
+    <div class="view">
+        <h2>Title1</h2>
+        <p id="red" class="para red">paragraph1</p>
+        <input type="text">
+        <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
+        <h2>Title2</h2>
+        <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
+          <span>hogehoge</span><strong><span>hugahuga</span></strong>
+        </p>
+        <p class="para green">paragraph3-2<a href="#">link3</a></p>
+        <ul>
+          <li>The first child of ul</li>
+          <li>2nd</li>
+          <li>3rd</li>
+          <li>The last child of ul</li>
+        </ul>
+      </div>
+    <div id="source1" class="source">
+      <pre>
+      <code>
+          &lt;h2>Title1&lt;/h2>
+          &lt;p id="red" class="para red">paragraph1&lt;/p>
+          &lt;input type="text">
+          &lt;p class="para blue">paragraph２&lt;a href="#">link1&lt;/a>hogehoge&lt;/p>
+          &lt;h2>Title2&lt;/h2>
+          &lt;p class="para green">paragraph3&lt;a href="https://youtu.be/ayjyN-9uwQU">link2&lt;/a>
+            &lt;span>hogehoge&lt;/span>&lt;strong>&lt;span>hugahuga&lt;/span>&lt;/strong>
+          &lt;/p>
+          &lt;p class="para green">paragraph3-2&lt;a href="#">link3&lt;/a>&lt;/p>
+          &lt;ul>
+            &lt;li>The first child of ul&lt;/li>
+            &lt;li>2nd&lt;/li>
+            &lt;li>3rd&lt;/li>
+            &lt;li>The last child of ul&lt;/li>
+          &lt;/ul>
+    </code>
+  </pre>
+    </div>
+
+  
   <div id="div2" class="box">
   <div class="source">
     <pre>
@@ -64,21 +64,21 @@
   </div>
   <div class="view">
       <h2>Title1</h2>
-    <p id="red" class="para red">paragraph1</p>
-    <input type="text">
-    <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
-    <h2>Title2</h2>
-    <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
-      <span>hogehoge</span><strong><span>hugahuga</span></strong>
-        <span>hugahuga</span>hoge</span>
-    </p>
-    <ul>
-      <li>The first child of ul</li>
-      <li>2nd</li>
-      <li>3rd</li>
-      <li>The last child of ul</li>
-    </ul>
-  </div>
+      <p id="red" class="para red">paragraph1</p>
+      <input type="text">
+      <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
+      <h2>Title2</h2>
+      <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
+        <span>hogehoge</span><strong><span>hugahuga</span></strong>
+      </p>
+      <p class="para green">paragraph3-2<a href="#">link3</a></p>
+      <ul>
+        <li>The first child of ul</li>
+        <li>2nd</li>
+        <li>3rd</li>
+        <li>The last child of ul</li>
+      </ul>
+    </div>
   <div>ポイント！後からclassで指定していますが、idの方が強いです！</div>
 </div>
 
@@ -103,20 +103,20 @@
   </div>
   <div class="view">
       <h2>Title1</h2>
-      <p id="red" class="para red">paragraph1</p>
-      <input type="text">
-      <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
-      <h2>Title2</h2>
-      <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
-        <span>hogehoge</span><strong><span>hugahuga</span></strong>
-          <span>hugahuga</span>hoge</span>
-      </p>
-      <ul>
-        <li>The first child of ul</li>
-        <li>2nd</li>
-        <li>3rd</li>
-        <li>The last child of ul</li>
-      </ul>
+    <p id="red" class="para red">paragraph1</p>
+    <input type="text">
+    <p class="para blue">paragraph２<a href="#">link1</a>hogehoge</p>
+    <h2>Title2</h2>
+    <p class="para green">paragraph3<a href="https://youtu.be/ayjyN-9uwQU">link2</a>
+      <span>hogehoge</span><strong><span>hugahuga</span></strong>
+    </p>
+    <p class="para green">paragraph3-2<a href="#">link3</a></p>
+    <ul>
+      <li>The first child of ul</li>
+      <li>2nd</li>
+      <li>3rd</li>
+      <li>The last child of ul</li>
+    </ul>
   </div>
   <div>point! クラスを複数指定している（="para red"みたいに）ことが活きてくる！</div>
 </div>
